# gestor-discos

./: CMakeLists.txt  Jenkinsfile  README.md  main.cpp
app/: main.cpp
src/: GestorDiscos.cpp  GestorDiscos.h
tests/: test_gestor_discos.cpp
